--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.advanced_card:nth-child(2) {
+    margin-top: 40px;
+    position: relative;
+}
+.advanced_card:last-child {
+    margin-top: 80px;
+}
+.advanced_card:nth-child(2)::before {
+    content: '';
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    background: #2acfcf;
+}
+.advanced_card:nth-child(2)::after {
+    content: '';
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    background: #2acfcf;
+}
